updated home content

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
         </div>
     
     </div>
-    <div class="col-sm-9 jumbotron"><p>Thanks for stopping by.  This is a demo portfolio site built using <a href="http://nodejs.org" title="Node.js">Node.js</a>, the <a href="http://expressjs.com" title="Express">Express.js framework</a>, <a href="http://getbootstap.com" title="Bootstrap">Twitter Bootstrap</a>, and the <a href="http://www.embeddedjs.com" title="EJS">EJS Template System</a>.  The site is an example for students in the <a href="http://www.georgiancollege.ca/course-outlines/comp/2068/fall/2015" title="Course Outline">COMP2068 Advanced Web Programming course</a> at <a href="http://www.georgiancollege.ca" title="Georgian College">Georgian College</a>.  Site deployment is done via <a href="http://github.com" title="GitHub">GitHub</a> and <a href="http://azure.microsoft.com" title="Azure">Windows Azure</a>.</p>
+    <div class="col-sm-9 jumbotron"><p>Thanks for stopping by.  This is a demo portfolio site built using <a href="http://nodejs.org" title="Node.js">Node.js</a>, the <a href="http://expressjs.com" title="Express">Express.js framework</a>, <a href="http://getbootstap.com" title="Bootstrap">Twitter Bootstrap</a>, and the <a href="http://www.embeddedjs.com" title="EJS">EJS Template System</a>.  The site is an example for students in the <a href="http://www.georgiancollege.ca/course-outlines/comp/2068/fall/2015" title="Course Outline">COMP2068 Advanced Web Programming course</a> at <a href="http://www.georgiancollege.ca" title="Georgian College">Georgian College</a>.  Site deployment is done via <a href="http://github.com" title="GitHub">GitHub</a> and <a href="http://heroku.com" title="Heroku">Heroku</a>.</p>
     
     </div>
 </div>
